--- a/report.html
+++ b/report.html
@@ -255,15 +255,15 @@
                 <span class="ai-badge">📅 Backtest 3 tháng</span>
             </div>
             <div style="margin-top: 10px; font-size: 13px;">
-                🕗 Cập nhật: 09/02/2026 08:33
+                🕗 Cập nhật: 09/02/2026 08:49
             </div>
         </div>
         
         <!-- Action Recommendation -->
         <div class="action-box">
             <div style="font-size: 13px; color: #aaa;">🎯 KHUYẾN NGHỊ (AI + Backtest)</div>
-            <div class="action-title">ƯU TIÊN SHORT scalp vùng 1960-1970. Tránh Long. Chờ tín hiệu đảo chiều tại 1940-1948 (RSI<30, Stoch<5) mới cân nhắc Long ngắn hạn.</div>
-            <div class="confidence">Độ tin cậy: 82% | Xu hướng: DOWNTREND</div>
+            <div class="action-title">ƯU TIÊN SHORT SCALP 1951-1955, chốt lời nhanh 1945-1948. Tránh Long cho đến khi khối ngoại ngừng bán (<-500 tỷ/phiên). Chờ tín hiệu đảo chiều rõ ràng.</div>
+            <div class="confidence">Độ tin cậy: 75% | Xu hướng: DOWNTREND</div>
         </div>
         
         <!-- Backtest Results -->
@@ -1308,32 +1308,32 @@
             <div style="display: flex; gap: 10px; padding: 10px; margin: 6px 0; background: rgba(0,0,0,0.2); border-radius: 8px; font-size: 14px;">
                 <div style="color: #888; min-width: 50px;">03/02</div>
                 <div style="flex: 1;">
-                    <b>Fed giữ nguyên lãi suất 4.25-4.5%, tín hiệu cắt giảm chậm hơn dự kiến</b>
-                    <div style="color: #888; font-size: 12px;">Áp lực bán tháo trên thị trường mới nổi, dòng vốn ngoại rút khỏi VN30F, VND chịu áp lực giảm giá</div>
+                    <b>Fed giữ nguyên lãi suất 4.25-4.5%, báo hiệu chu kỳ nới lỏng tiền tệ tạm dừng</b>
+                    <div style="color: #888; font-size: 12px;">Dòng vốn ngoại có xu hướng chảy về USD, tạo áp lực bán ròng trên VN30F và các cổ phiếu vốn hóa lớn</div>
                 </div>
                 <span class="signal signal-negative">TIÊU CỰC</span>
             </div>
             <div style="display: flex; gap: 10px; padding: 10px; margin: 6px 0; background: rgba(0,0,0,0.2); border-radius: 8px; font-size: 14px;">
                 <div style="color: #888; min-width: 50px;">04/02</div>
                 <div style="flex: 1;">
-                    <b>Chỉ số USD Index tăng vượt 108 điểm, mạnh nhất 2 tháng</b>
-                    <div style="color: #888; font-size: 12px;">Tăng chi phí vay ngoại tệ, giảm sức hấp dẫn của tài sản Việt Nam, VN30F điều chỉnh theo áp lực bán ròng</div>
+                    <b>Chỉ số USD Index tăng lên 108.2 điểm, mức cao nhất 2 tháng</b>
+                    <div style="color: #888; font-size: 12px;">USD mạnh làm giảm sức hấp dẫn của tài sản rủi ro như chứng khoán Việt Nam, khối ngoại bán ròng mạnh</div>
                 </div>
                 <span class="signal signal-negative">TIÊU CỰC</span>
             </div>
             <div style="display: flex; gap: 10px; padding: 10px; margin: 6px 0; background: rgba(0,0,0,0.2); border-radius: 8px; font-size: 14px;">
                 <div style="color: #888; min-width: 50px;">05/02</div>
                 <div style="flex: 1;">
-                    <b>Giá dầu Brent tăng 3.2% lên 76.5 USD/thùng do căng thẳng Trung Đông</b>
-                    <div style="color: #888; font-size: 12px;">Hỗ trợ cổ phiếu dầu khí (PVS, PVD) nhưng gây áp lực lạm phát, tác động trái chiều đến VN-Index</div>
+                    <b>Giá dầu Brent tăng 3.2% lên 76.8 USD/thùng do căng thẳng Trung Đông</b>
+                    <div style="color: #888; font-size: 12px;">Tích cực cho cổ phiếu dầu khí (PVS, PVD) nhưng tiêu cực cho ngành hàng không và logistics</div>
                 </div>
                 <span class="signal signal-neutral">TRUNG LẬP</span>
             </div>
             <div style="display: flex; gap: 10px; padding: 10px; margin: 6px 0; background: rgba(0,0,0,0.2); border-radius: 8px; font-size: 14px;">
                 <div style="color: #888; min-width: 50px;">06/02</div>
                 <div style="flex: 1;">
-                    <b>Trung Quốc công bố PMI dịch vụ tháng 1 đạt 52.2, cao hơn kỳ vọng</b>
-                    <div style="color: #888; font-size: 12px;">Tăng kỳ vọng phục hồi kinh tế, hỗ trợ nhóm cổ phiếu xuất khẩu và VN30F phiên chiều 06/02</div>
+                    <b>Trung Quốc công bố PMI dịch vụ tháng 1 đạt 50.8 điểm, vượt kỳ vọng</b>
+                    <div style="color: #888; font-size: 12px;">Tín hiệu phục hồi kinh tế Trung Quốc hỗ trợ cổ phiếu xuất khẩu và nguyên vật liệu Việt Nam</div>
                 </div>
                 <span class="signal signal-positive">TÍCH CỰC</span>
             </div>
