--- a/report.html
+++ b/report.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Chiến lược Phái sinh - Quang | 16/02/2026</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -255,7 +256,7 @@
                 <span class="ai-badge">📅 Backtest 3 tháng</span>
             </div>
             <div style="margin-top: 10px; font-size: 13px;">
-                🕗 Cập nhật: 16/02/2026 11:35
+                🕗 Cập nhật: 16/02/2026 11:38
             </div>
         </div>
         
